FIX: /categories page on mobile

--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -107,64 +107,6 @@ html.anon .topic-list a.title:visited:not(.badge-notification) {color: dark-ligh
 
 }
 
-.navigation-categories {
-  .topic-list {
-    width: 48%;
-    float: left;
-  }
-  .main-link {
-    width: 100%;
-    .discourse-tag {
-      font-size: 12px;
-    }
-  }
-  .topic-stats {
-    text-align: right;
-    a {
-      color: dark-light-choose(scale-color($primary, $lightness: 50%), scale-color($secondary, $lightness: 40%));
-    }
-  }
-  .num.posts {
-    text-align: right;
-    a {
-      padding: 0;
-    }
-  }
-  .posts-map.posts {
-    margin-bottom: 10px;
-    width: 100%;
-    .badge-posts {
-      font-weight: bold;
-    }
-  }
-  .topic-list-latest {
-    margin-left: 4%;
-    .new-posts {
-      margin-left: 5px;
-    }
-  }
-  .topic-list.categories {
-    th.stats {
-      width: 20%;
-    }
-    .stats {
-      vertical-align: top;
-      text-align: center;
-      .value {
-        font-size: 1.2em;
-      }
-    }
-  }
-  .no-topics, .more-topics {
-    border-bottom: none;
-    td {
-      padding-right: 0 !important;
-      color: $primary;
-    }
-  }
-}
-
-
 .topic-list.categories {
 
   .category .badge-notification {
